# fastapizero

./: .dockerignore  .gitignore  Dockerfile  apagar.txt  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/: pipeline.yaml
.github/workflows/: pipeline.yaml
fastapizero/: app.py  models.py  schemas.py  security.py  settings.py
fastapizero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 6d872781479b_create_users_table.py  9907ad44b3fa_create_todos_table.py  9a544012b363_initial_migration.py  cf4940327554_column_update.py
tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_security.py  test_todo.py  test_users.py
